src/test/ui/issues/issue-35976.stderr
error: the `wait` method cannot be invoked on a trait object
  --> $DIR/issue-35976.rs:14:9
   |
LL |         fn wait(&self) where Self: Sized;
   |                                    ----- this has a `Sized` requirement
...
LL |     arg.wait();
   |         ^^^^

error: aborting due to previous error

